--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       </div>
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="project_bootstrap_log_in.html">Sign in</a></li>
+        <li><a href="log_in.html">Sign in</a></li>
       </ul>
     </nav>
     <div class="container">
