--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <nav class="navbar sticky-top navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Welcome</a>
     <ul>
-      <li><a class="nav navbar-nav" href="Project_bootstrap.html">Landing page</a></li>
+      <li><a class="nav navbar-nav" href="index.html">Landing page</a></li>
     </ul>
   </nav>
   <div class="container">
