--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a class="navbar-brand" href="#">Welcome</a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
         <li><a href="login.html">Sign in</a></li>
       </ul>
     </nav>
