--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <nav class="navbar sticky-top navbar-dark bg-dark">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Welcome</a>
+        <a class="navbar-brand" href="index.html">Welcome</a>
       </div>
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">Home</a></li>
