--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       </div>
     </div>
     <div class="container">
+      <h2>Video for Brewing Coffee</h2>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/gvPetTPFsZM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <h2>Pictures of coffee</h2>
       <div class="row">
         <div class="col-lg-3 col-xs-6"><a href="#" class="thumbnail"><img src="638c7e95a2b824940bde9ee4eafd1afd--black-coffee-coffee-beans.jpg" alt=""></a></div>
