--- a/index.html
+++ b/index.html
@@ -1,34 +1,28 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
+  </head>
   <body>
-    <nav class="navbar sticky-top navbar-dark bg-dark">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="index.html">Welcome</a>
+    <header class="nav">
+      <div class="logo">
+        <h1>My Website</h1>
       </div>
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="login.html">Sign in</a></li>
+      <ul class="navbar">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Contacts</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Products</a></li>
       </ul>
-    </nav>
+      <p class="para">Please Visit this Website@
+        <a href="https://www.facebook.com">here</a>
+      </p>
+    </header>
     <div class="container">
-      <div class="jumbotron">
-        <h1>Coffee Lover page!</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
+      <h1>This is my website</h1>
+      <p>Please contact to know more</p>
     </div>
-    <div class="container">
-      <h2>Video for Brewing Coffee</h2>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/gvPetTPFsZM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <h2>Pictures of coffee</h2>
-      <div class="row">
-        <div class="col-lg-3 col-xs-6"><a href="#" class="thumbnail"><img src="638c7e95a2b824940bde9ee4eafd1afd--black-coffee-coffee-beans.jpg" alt=""></a></div>
-        <div class="col-lg-3 col-xs-6"><a href="#" class="thumbnail"><img src="f958ddcf25c1d4fc9cc88fabc036b142--coffee-love-coffee-art.jpg" alt=""></a></div>
-        <div class="col-lg-3 col-xs-6"><a href="#" class="thumbnail"><img src="Coffee-200x200.jpg" alt=""></a></div>
-        <div class="col-lg-3 col-xs-6"><a href="#" class="thumbnail"><img src="Thumbnail-Sumerian-Coffee-DSC_6295-200x200.jpg" alt=""></a></div>
   </body>
 </html>
